--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,12 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.google.firebase:firebase-auth:11.0.2'
+    compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     compile 'com.android.support:support-v4:26.0.0-alpha1'
     compile 'com.android.support:design:26.0.0-alpha1'
+    compile 'com.google.firebase:firebase-database:11.0.1'
+    compile 'com.mostafagazar:customshapeimageview:1.0.4'
     testCompile 'junit:junit:4.12'
 }
 
