--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,9 +33,22 @@ dependencies {
     compile 'com.mostafagazar:customshapeimageview:1.0.4'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.firebase:firebase-storage:11.0.2'
+    compile 'com.github.rey5137:material:1.2.2'
+
+    //compile 'com.github.amanjeetsingh150:SmartyToast:1.0'
+    compile 'com.afollestad.material-dialogs:core:0.9.4.5'
     compile 'junit:junit:4.12'
 }
-
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == 'com.android.support') {
+            if (!requested.name.startsWith("multidex")) {
+                details.useVersion '25.3.0'
+            }
+        }
+    }
+}
 
 
 apply plugin: 'com.google.gms.google-services'
