--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.firebase:firebase-storage:11.0.2'
     compile 'com.github.rey5137:material:1.2.2'
+    compile 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
 
     //compile 'com.github.amanjeetsingh150:SmartyToast:1.0'
     compile 'com.afollestad.material-dialogs:core:0.9.4.5'
