--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
     buildTypes {
         release {
@@ -35,8 +36,12 @@ dependencies {
     compile 'com.google.firebase:firebase-storage:11.0.2'
     compile 'com.github.rey5137:material:1.2.2'
     compile 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
-
-    //compile 'com.github.amanjeetsingh150:SmartyToast:1.0'
+    // Android JUnit Runner
+    androidTestCompile 'com.android.support.test:runner:0.5'
+    // JUnit4 Rules
+    androidTestCompile 'com.android.support.test:rules:0.5'
+    // Espresso core
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
     compile 'com.afollestad.material-dialogs:core:0.9.4.5'
     compile 'junit:junit:4.12'
 }
