--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,15 +34,18 @@ dependencies {
     compile 'com.mostafagazar:customshapeimageview:1.0.4'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.firebase:firebase-storage:11.0.2'
+    compile 'com.afollestad.material-dialogs:core:0.9.4.5'
     compile 'com.github.rey5137:material:1.2.2'
     compile 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
-    // Android JUnit Runner
+
     androidTestCompile 'com.android.support.test:runner:0.5'
-    // JUnit4 Rules
+
     androidTestCompile 'com.android.support.test:rules:0.5'
-    // Espresso core
+
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
-    compile 'com.afollestad.material-dialogs:core:0.9.4.5'
+
+    androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.2'
+
     compile 'junit:junit:4.12'
 }
 configurations.all {
